Fixed JW Player logo stretching.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2608,31 +2608,31 @@ body.no-sidebars .islandora-basic-image-content, body.no-sidebars .islandora-aud
   width: auto;
   max-width: 100%;
 }
-/* line 277, ../sass/components/_islandora.scss */
-body.no-sidebars .islandora-basic-image-content img, body.no-sidebars .islandora-audio-content img, body.no-sidebars .islandora-pdf-content img, body.no-sidebars .islandora-video-content img {
+/* line 278, ../sass/components/_islandora.scss */
+body.no-sidebars .islandora-basic-image-content img {
   width: 100%;
 }
-/* line 284, ../sass/components/_islandora.scss */
+/* line 282, ../sass/components/_islandora.scss */
 body.no-sidebars #mediaplayer_wrapper {
   max-width: 100%;
 }
 
-/* line 288, ../sass/components/_islandora.scss */
+/* line 286, ../sass/components/_islandora.scss */
 #mediaplayer {
   max-width: 100% !important;
 }
 
-/* line 292, ../sass/components/_islandora.scss */
+/* line 290, ../sass/components/_islandora.scss */
 #clip, .islandora-pdf-link {
   margin-left: 0.5em;
 }
 
-/* line 297, ../sass/components/_islandora.scss */
+/* line 295, ../sass/components/_islandora.scss */
 .block-islandora-bookmark h2.block-title {
   display: none;
 }
 
-/* line 307, ../sass/components/_islandora.scss */
+/* line 305, ../sass/components/_islandora.scss */
 body.page-browse ul.pager {
   display: none;
 }
